优化返回数据

--- a/result/report.html
+++ b/result/report.html
@@ -122,9 +122,9 @@ function html_escape(s) {
 </script>
 <div class='heading'>
 <h1 style="font-family: Microsoft YaHei">自动化测试报告</h1>
-<p class='attribute'><strong>测试人员 : </strong> Findyou</p>
-<p class='attribute'><strong>开始时间 : </strong> 2019-08-21 13:29:36</p>
-<p class='attribute'><strong>合计耗时 : </strong> 0:00:00.000806</p>
+<p class='attribute'><strong>测试人员 : </strong> dudu11</p>
+<p class='attribute'><strong>开始时间 : </strong> 2019-08-22 13:59:26</p>
+<p class='attribute'><strong>合计耗时 : </strong> 0:00:00.001341</p>
 <p class='attribute'><strong>测试结果 : </strong> 共 11，通过 8，失败 3，通过率= 72.73%</p>
 
 <p class='description'></p>
@@ -157,7 +157,7 @@ function html_escape(s) {
 </tr>
 
 <tr class='failClass warning'>
-    <td>MyTestCase</td>
+    <td>test.HTMLTestReport.MyTestCase</td>
     <td class="text-center">5</td>
     <td class="text-center">3</td>
     <td class="text-center">2</td>
@@ -227,7 +227,7 @@ AssertionError: 2 != 5 : 测试错误
 </tr>
 
 <tr class='failClass warning'>
-    <td>APITestCase</td>
+    <td>test.HTMLTestReport.APITestCase</td>
     <td class="text-center">6</td>
     <td class="text-center">5</td>
     <td class="text-center">1</td>
